# fox-marketpilot

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260529_0001_create_research_tasks.py  20260529_0002_create_opportunities.py  20260529_0003_create_agent_run_events.py  20260530_0004_create_research_sources.py  20260530_0005_create_demand_insights.py  20260530_0006_create_supply_candidates.py  20260530_0007_rename_legacy_demand_insight_tables.py  20260530_0008_create_competitor_references.py  20260531_0009_create_validation_budgets.py  20260531_0010_create_opportunity_risks.py  20260531_0011_create_action_plans.py  20260531_0012_create_rag_evidence_chunks.py  20260531_0013_create_rag_evaluation_tables.py  20260531_0014_create_report_shares.py  20260601_0015_create_research_quality_readiness_runs.py  20260607_0016_create_generation_evaluation_tables.py  20260607_0017_create_research_intake_conversations.py
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  test_action_plans.py  test_competitor_references.py  test_demand_insights.py  test_embeddings.py  test_generation_quality_evaluation.py  test_langsmith_integration.py  test_opportunity_research.py  test_opportunity_risks.py  test_rag_quality_evaluation.py  test_rag_retrieval.py  test_report_sharing.py  test_research_intake_conversations.py  test_research_quality_readiness.py  test_research_sources.py  test_research_tasks.py  test_supply_candidates.py  test_validation_budgets.py
(+338 files in other folders)
