[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "marketpilot-backend"
version = "0.1.0"
description = "MarketPilot FastAPI backend and agent runtime."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "alembic>=1.16.0,<1.17.0",
  "boto3>=1.41.0",
  "celery[redis]>=5.6.0",
  "fastapi>=0.128.0",
  "httpx>=0.28.0",
  "langgraph>=0.4.0,<0.4.38",
  "langsmith>=0.4.0,<0.4.38",
  "openai>=2.0.0",
  "playwright>=1.57.0",
  "psycopg[binary]>=3.2.0,<3.3.0",
  "pydantic>=2.10.0,<2.12.0",
  "pydantic-settings>=2.10.0,<2.12.0",
  "redis>=5.3.0,<7.1.0",
  "sqlalchemy>=2.0.0",
  "tavily-python>=0.7.0",
  "uvicorn[standard]>=0.38.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "ruff>=0.14.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 88
